# colorctl

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  handlers.rs  main.rs  utility.rs
