[package]
name = "colorctl"
version = "0.1.0"
edition = "2021"

authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simple variable substitution based templating"
readme = "README.md"
homepage = "https://github.com/mavenried"
repository = "https://github.com/mavenried/colorctl"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
regex = "1.10"
shellexpand = "3.1"
colored = "2.1"
